--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
     "description": "A CLI application for managing employees, roles, and departments using PostgreSQL",
     "main": "dist/app.js",
     "scripts": {
-        "start": "ts-node src/app.ts",
+        "start": "node dist/app.js",
         "build": "tsc",
-        "start:compiled": "node dist/app.js",
         "dev": "ts-node src/app.ts"
     },
     "keywords": [
